--- a/macSVG/Resources/macsvg_examples/svg/xhtml_with_javascript.xhtml
+++ b/macSVG/Resources/macsvg_examples/svg/xhtml_with_javascript.xhtml
@@ -1,43 +1,11 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-xmlns:svg="http://www.w3.org/2000/svg"
-xmlns:xlink="http://www.w3.org/1999/xlink" width="480px" height="360px"
-viewBox="0 0 480 360" style="zoom: 1;">
-  <head>
-    <meta content="user-scalable=no, initial-scale=1.0"
-    name="viewport" />
-    <script src="https://github.com/adobe-webplatform/Snap.svg/raw/master/dist/snap.svg-min.js">
-    </script>
-    <script>
-		<![CDATA[
-		function testSnap() 
-		{ 
-			var s = Snap("#svg_document"); 
-			var bigCircle = s.circle(150, 150, 100); 
-			var ellipse1 = s.select("#ellipse1");
-			ellipse1.attr({ fill: "#00ff00" }); 
-			ellipse1.animate({rx: 250}, 2500); }
-		]]>
-	</script>
-  </head>
-  <body style="border: 0px; margin: 0px; padding: 0px; offset: 0px; width: 480px; height: 360px; background: white;">
-
-    <svg xmlns="http://www.w3.org/2000/svg"
-    xmlns:xlink="http://www.w3.org/1999/xlink" cursor="crosshair"
-    onload="testSnap()" height="360px" id="svg_document" width="480px"
-    version="1.1" preserveAspectRatio="none" viewBox="0 0 480 360">
-      <title id="svg_document_title">Untitled.svg</title>
-      <desc id="desc1">The example demonstrates the use of an XHTML
-      file with the Snap JavaScript library, interacting with SVG
-      edited in macSVG. 
-      <defs id="svg_document_defs"></defs>
-      <g id="main_group">
-        <rect stroke="black" x="0px" height="360px" y="0px"
-        id="background_rect" stroke-width="3px" width="480px"
-        fill="white"></rect>
-      </g></desc>
-    </svg>
-  </body>
-</html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="480px" height="360px" viewBox="0 0 480 360" style="zoom: 1;"><head><meta content="user-scalable=no, initial-scale=1.0" name="viewport" /><script src="https://github.com/adobe-webplatform/Snap.svg/raw/master/dist/snap.svg-min.js"></script><script>
+                function testSnap() 
+                { 
+                        var s = Snap("#svg_document"); 
+                        var bigCircle = s.circle(150, 150, 100); 
+                        var ellipse1 = s.select("#ellipse1");
+                        ellipse1.attr({ fill: "#00ff00" }); 
+                        ellipse1.animate({rx: 250}, 2500); }
+                </script></head><body style="border: 0px; margin: 0px; padding: 0px; offset: 0px; width: 480px; height: 360px; background: white;"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" cursor="crosshair" onload="testSnap()" height="360px" id="svg_document" width="480px" version="1.1" preserveAspectRatio="none" viewBox="0 0 480 360"><title id="svg_document_title">XHTML with JavaScript and SVG</title><desc id="desc1">The example demonstrates the use of an XHTML file with the Snap JavaScript library, interacting with SVG edited in macSVG. </desc><defs id="svg_document_defs"></defs><g id="main_group"><rect stroke="black" x="0px" height="360px" y="0px" id="background_rect" stroke-width="3px" width="480px" fill="white"></rect><text stroke="none" style="outline-style:none;" id="text1" stroke-width="1px" x="244px" y="37px" font-family="Helvetica" fill="#000000" font-size="24px" transform="" text-anchor="middle">XHTML with JavaScript and SVG</text><circle stroke="#000000" id="circle1" stroke-width="3px" cy="240px" fill="#ffffff" r="68px" cx="254px" transform=""></circle></g></svg></body></html>
