--- a/macSVG/en.lproj/macSVG.help/Contents/Resources/en.lproj/index.html
+++ b/macSVG/en.lproj/macSVG.help/Contents/Resources/en.lproj/index.html
@@ -5,6 +5,8 @@
     <LINK REL="stylesheet" HREF="../style/MyStyleSheet.css" MEDIA="all" />
     <META HTTP-EQUIV="X-UA-Compatible" content="IE=edge" />
     <META name="AppleTitle" content="macSVG Help"/>
+    <meta name="AppleIcon" content="../GlobalArt/AppIconDefault_macSVG.png" />
+    <meta name="AppleKnowledgeBaseURL" content="http://macsvg.org/helpbook/?s='query'&l='lang'&p='product'"/>
  
     <TITLE>macSVG Help</TITLE>
 </HEAD>
@@ -12,5 +14,16 @@
 <h1>macSVG Help goes here</h1>
 
 based on http://autodidaktos.com/?p=156 <br/><br/>
+
+and https://www.toddheberlein.com/blog/2014/5/8/help-on-os-x-help <br/><br/>
+
+To generate Help Book<br/>
+cd macSVG.help/Contents/Resources/<br/>
+hiutil --remote-url=http://macsvg.org/ -Caf ./en.lproj/macSVG.help.helpindex ./en.lproj<br/><br/>
+
+hiutil --remote-url=http://macsvg.org/ -Cavf /var/macSVG.help.helpindex . <br/><br/>
+
+<a href="http://macsvg.org">macsvg.org</a>
+
 </BODY>
 </HTML>
