The macsvg.org website has implemented secure https connections.  This commit changes several URLs in this project to use https, mostly in documentation files.
For the sake of clarity: the built-in web server in the macSVG application currently supports unsecured http protocol only.  A future application update could add https support.

--- a/macSVG/en.lproj/macSVG.help/Contents/Resources/en.lproj/index.html
+++ b/macSVG/en.lproj/macSVG.help/Contents/Resources/en.lproj/index.html
@@ -6,7 +6,7 @@
     <META HTTP-EQUIV="X-UA-Compatible" content="IE=edge" />
     <META name="AppleTitle" content="macSVG Help"/>
     <meta name="AppleIcon" content="../GlobalArt/AppIconDefault_macSVG.png" />
-    <meta name="AppleKnowledgeBaseURL" content="http://macsvg.org/helpbook/?s='query'&l='lang'&p='product'"/>
+    <meta name="AppleKnowledgeBaseURL" content="https://macsvg.org/helpbook/?s='query'&l='lang'&p='product'"/>
  
     <TITLE>macSVG Help</TITLE>
 </HEAD>
@@ -19,11 +19,11 @@ and https://www.toddheberlein.com/blog/2014/5/8/help-on-os-x-help <br/><br/>
 
 To generate Help Book<br/>
 cd macSVG.help/Contents/Resources/<br/>
-hiutil --remote-url=http://macsvg.org/ -Caf ./en.lproj/macSVG.help.helpindex ./en.lproj<br/><br/>
+hiutil --remote-url=https://macsvg.org/ -Caf ./en.lproj/macSVG.help.helpindex ./en.lproj<br/><br/>
 
-hiutil --remote-url=http://macsvg.org/ -Cavf /var/macSVG.help.helpindex . <br/><br/>
+hiutil --remote-url=https://macsvg.org/ -Cavf /var/macSVG.help.helpindex . <br/><br/>
 
-<a href="http://macsvg.org">macsvg.org</a>
+<a href="https://macsvg.org">macsvg.org</a>
 
 </BODY>
 </HTML>
