Updated README.md in advance of a future release.
Some dates in the source code were updated to 2019.

--- a/README.html
+++ b/README.html
@@ -330,9 +330,9 @@ kbd {
 
 <h1 id="toc_0">macSVG</h1>
 
-<p><img src="https://cdn.rawgit.com/dsward2/macSVG/7cf2b09884673e1bb65a0a9ab5df184741bb7c65/README_images/macsvg-logo-animation.svg" width="660" height="105"></p>
+<p><img src="https://cdn.rawgit.com/dsward2/macSVG/7cf2b09884673e1bb65a0a9ab5df184741bb7c65/README_images/macsvg-logo-animation.svg?sanitize=true"" width="660" height="105"></p>
 
-<p><strong>February 1, 2019 – <a href="https://github.com/dsward2/macSVG/releases/">macSVG v1.1.5 is released</a>, with a temporary fix for the application to work in macOS Mojave Dark Mode.  For now, the app will &quot;opt-out&quot; of Dark Mode, and render views as a Light Mode application.  The next release will adjust the views to provide a proper Dark Mode user interface.</strong></p>
+<p><strong>October, 2019 – <a href="https://github.com/dsward2/macSVG/releases/">macSVG v1.1.5 is the current release.</a>.  The next release is under development.  It will not fully support Dark Mode, but it does contain several updates for macOS 10.15 Catalina, and some bug fixes. A Share button will be added as a convenient way to preview the current SVG file on an iPhone via AirDrop and macSVG&#39;s built-in HTTP server.</strong></p>
 
 <hr>
 
@@ -366,7 +366,7 @@ kbd {
 
 <p>Migration to Swift language, and Swift Package Manager for importing third-party code.</p>
 
-<p>Copyright (c) 2016-2018 by ArkPhone, LLC.</p>
+<p>Copyright (c) 2016-2019 by ArkPhone, LLC.</p>
 
 <p>All trademarks are the property of their respective holders.</p>
 
