Fixed a typo in README.md

--- a/README.html
+++ b/README.html
@@ -330,7 +330,7 @@ kbd {
 
 <h1 id="toc_0">macSVG</h1>
 
-<p><img src="https://cdn.rawgit.com/dsward2/macSVG/7cf2b09884673e1bb65a0a9ab5df184741bb7c65/README_images/macsvg-logo-animation.svg?sanitize=true"" width="660" height="105"></p>
+<p><img src="https://cdn.rawgit.com/dsward2/macSVG/7cf2b09884673e1bb65a0a9ab5df184741bb7c65/README_images/macsvg-logo-animation.svg?sanitize=true" width="660" height="105"></p>
 
 <p><strong>October, 2019 – <a href="https://github.com/dsward2/macSVG/releases/">macSVG v1.1.5 is the current release.</a>.  The next release is under development.  It will not fully support Dark Mode, but it does contain several updates for macOS 10.15 Catalina, and some bug fixes. A Share button will be added as a convenient way to preview the current SVG file on an iPhone via AirDrop and macSVG&#39;s built-in HTTP server.</strong></p>
 
