--- a/README.html
+++ b/README.html
@@ -332,7 +332,11 @@ kbd {
 
 <p><img src="https://cdn.rawgit.com/dsward2/macSVG/7cf2b09884673e1bb65a0a9ab5df184741bb7c65/README_images/macsvg-logo-animation.svg?sanitize=true" width="660" height="105"></p>
 
-<p><strong>October, 2019 – <a href="https://github.com/dsward2/macSVG/releases/">macSVG v1.1.5 is the current release.</a>.  The next release is under development.  It will not fully support Dark Mode, but it does contain several updates for macOS 10.15 Catalina, and some bug fixes. A Share button will be added as a convenient way to preview the current SVG file on an iPhone via AirDrop and macSVG&#39;s built-in HTTP server.</strong></p>
+<p><strong>December 9, 2019 – This release of macSVG contains several bug fixes and a couple of new features.</strong></p>
+
+<p><strong>The tool panel now contains a Share button.  It can be used with AirDrop to quickly open the current SVG document on an iPhone, iPad or another Mac.</strong></p>
+
+<p><strong>The user interface for managing animation elements has been improved for setting the keyTimes, keySplines and keyPoints attributes.  This change makes it easier to set linear/ease-in/ease-out animation timings.</strong></p>
 
 <hr>
 
