--- a/README.html
+++ b/README.html
@@ -338,6 +338,8 @@ kbd {
 
 <p><strong>The user interface for managing animation elements has been improved for setting the keyTimes, keySplines and keyPoints attributes.  This change makes it easier to set linear/ease-in/ease-out animation timings.</strong></p>
 
+<p>The OpenClipArt.org website under the Help menu is currently offline.  Hopefully it will return soon.</p>
+
 <hr>
 
 <p><strong>macSVG is a MIT-licensed open-source macOS app for designing HTML5 SVG 1.1 (Scalable Vector Graphics) art and animation.</strong></p>
